--- a/src/components/Block/styles.module.css
+++ b/src/components/Block/styles.module.css
@@ -1,12 +1,21 @@
 .block {
   display: flex;
   flex-direction: column;
-  background: lightgreen;
   width: 100%;
   max-width: 640px;
   padding: 24px;
+  border-radius: 24px;
+  border: 2px solid;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
 }
 
+.valid-block {
+  background: lightgreen;
+}
+
+.invalid-block {
+  background: #ff9c9c;
+}
 .block > div {
   display: flex;
   flex-direction: column;
